90% done just need a reload function

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
     <div class = text-center>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Press Any Key to Play!</a>
+            <a class="btn btn-primary btn-lg" href="#" role="button" id="gameStatus">Press Any Key to Play!</a>
     </div>
 
 
